--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
     <h1>Dogs</h1>
+    <br>
+    <br>
+    <h3><b>German Shephard</b></h3>
+    <p>Has high intelligence with the qualities needed to be a great guard dog.</p>
+    <br>
+    <h3><b>Golden Retriever</b></h3>
+    <p>Medium size dog that is famous for it's golden fur. Everyone loves them, it's hard not to.</p>
+    <br>
+    <h3><b>Chihuahua</b></h3>
+    <p>The Devil as a dog, the Chihuahua is a loveable dog breed that can act super crazy or super calm, never in between.</p>
+
 </body>
 </html>
