Final commit - Updated colors, added images

--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        h3 {
+            font-size: 20px;
+        }
+        body {
+            background-color: #eeeef8;
+        }
+        b a {
+            color: #be7249;
+        }
+    </style>
     <title>Matts website</title>
 </head>
 <body>
     <h1>Dogs</h1>
-    <br>
-    <br>
-    <h3><b>German Shephard</b></h3>
+    <h3><b><a href="https://www.akc.org/dog-breeds/german-shepherd-dog/">German Shephard</a></b></h3>
     <p>Has high intelligence with the qualities needed to be a great guard dog.</p>
+    <img src="german_dog.png" alt="German Shephard"><br>
+    <!-- Credit to https://www.dailypaws.com/dogs-puppies/dog-breeds/german-shepherd -->
     <br>
-    <h3><b>Golden Retriever</b></h3>
+    <h3><b><a href="https://www.akc.org/dog-breeds/golden-retriever/">Golden Retriever</a></b></h3>
     <p>Medium size dog that is famous for it's golden fur. Everyone loves them, it's hard not to.</p>
+    <img src="golden.png" alt="Golden Retriever"><br>
+    <!-- Credit to https://www.orvis.com/golden-retriever.html -->
     <br>
-    <h3><b>Chihuahua</b></h3>
-    <p>The Devil as a dog, the Chihuahua is a loveable dog breed that can act super crazy or super calm, never in between.</p>
-
+    <h3><b><a href="https://www.akc.org/dog-breeds/chihuahua/">Chihuahua</a></b></h3>
+    <p>The Devil as a dog the Chihuahua is a loveable dog breed that can act super crazy or super calm, never in between.</p>
+    <img src="chihuahua.png" alt="Chihuahua"><br>
 </body>
 </html>
