Added styling to daughter of h3 links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Matts website</title>
 </head>
 <body>
-    <h1>Dogs</h1><a href="second_page.html">Next page</a>
+    <h1>Dogs</h1>
+    <a id="back" href="second_page.html">Next page</a>
     <hr>
     
     <h3><b><a href="https://www.akc.org/dog-breeds/german-shepherd-dog/">German Shephard</a></b></h3>
