--- a/second_page.html
+++ b/second_page.html
@@ -8,7 +8,8 @@
     <title>Second page</title>
 </head>
 <body>
-    <h1>Text</h1><a href="index.html">Home</a><hr>
+    <h1>Text</h1>
+    <a id="back" href="index.html">Home</a><hr>
     <h3>More text</h3>
     <p>paragraph</p>
 </body>
