Added third page and rainbow with CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <h1>Dogs</h1>
-    <a id="back" href="second_page.html">Next page</a>
+    <a id="back" href="second_page.html">Next page</a><br>
+    <a href="third_page.html" style="background-color:rgb(250, 170, 170)">Third page</a><br>
     <hr>
     
     <h3><b><a href="https://www.akc.org/dog-breeds/german-shepherd-dog/">German Shephard</a></b></h3>
