--- a/third_page.html
+++ b/third_page.html
@@ -35,8 +35,12 @@
             background-color: violet;
             color: violet;
         }
-        p{
+        p {
             margin:0;
+        }
+        body {
+            background-color:ivory;
+            text-align: center;
         }
 
     </style>
