Program, resume, hobby pages

--- a/third_page.html
+++ b/third_page.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <style>
+        p {
+            font-size: 20px;
+            width: 75%;
+        }
         .red {
             background-color: red;
             color: red;
@@ -39,6 +44,7 @@
             margin:0;
         }
         body {
+            font-family:Georgia, 'Times New Roman', Times, serif;
             background-color:ivory;
             text-align: center;
         }
@@ -46,16 +52,65 @@
     </style>
 </head>
 <body>
-    <h1>Messing with CSS</h1><br>
-    <a href="index.html">Home page</a><br>
-    <a href="second_page.html">Second page</a><hr>
-    
-    <p class="red">red</p>
-    <p class="orange">orange</p>
-    <p class="yellow">yellow</p>
-    <p class="green">green</p>
-    <p class="blue">blue</p>
-    <p class="indigo">indigo</p>
-    <p class="violet">violet</p>
+    <h1>Messing with CSS</h1><hr>
+    <div>
+        <ul>
+            <li><a href="index.html">Home page</a></li>
+            <li><a href="second_page.html">Second page</a></li>
+        </ul>
+    </div><br>
+    <div class="rainbow">
+        <p class="red">red</p>
+        <p class="orange">orange</p>
+        <p class="yellow">yellow</p>
+        <p class="green">green</p>
+        <p class="blue">blue</p>
+        <p class="indigo">indigo</p>
+        <p class="violet">violet</p>
+    </div><br>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+    <p>blank</p>
+
+
 </body>
 </html>
