--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1>Dogs</h1>
     <a id="back" href="second_page.html">Next page</a><br>
     <a href="third_page.html" style="background-color:rgb(250, 170, 170)">Third page</a><br>
+    <a href="separate pages/program.html">Programs</a><br>
+    <a href="separate pages/resume.html">Resume</a>
     <hr>
     
     <h3><b><a href="https://www.akc.org/dog-breeds/german-shepherd-dog/">German Shephard</a></b></h3>
