--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
         b a {
             color: #be7249;
         }
+        .red-bg {
+            background-color: rgb(187, 53, 53);
+            color: rgb(230, 225, 225);
+        }
     </style>
     <link rel="stylesheet" href="style.css">
     <title>Matts website</title>
 </head>
 <body>
     <h1>Dogs</h1>
-    <a id="back" href="second_page.html">Next page</a><br>
+    <a id="back" href="nav_bar.html">Next page</a><br>
     <a href="third_page.html" style="background-color:rgb(250, 170, 170)">Third page</a><br>
-    <a href="separate pages/program.html">Programs</a><br>
-    <a href="separate pages/resume.html">Resume</a>
+    <a class="red-bg" href="separate pages/hobby.html">Hobby</a><br>
+    <a class="red-bg" href="separate pages/program.html">Programs</a><br>
+    <a class="red-bg" href="separate pages/resume.html">Resume</a>
     <hr>
     
     <h3><b><a href="https://www.akc.org/dog-breeds/german-shepherd-dog/">German Shephard</a></b></h3>
