--- a/separate pages/program.html
+++ b/separate pages/program.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home page</a></li>
+            <li><a href="../nav_bar.html">Second page</a></li>
+            <li style="float: right;"><a href="hobby.html">Hobby</a></li>
+            <li style="float: right;"><a href="program.html">Programs</a></li>
+            <li style="float: right;"><a href="resume.html">Resume</a></li>
+        </ul>
+    </nav><br>
     <h1>Programs</h1>
+    <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
+    <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
+    <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
 </body>
 </html>
