--- a/separate pages/resume.html
+++ b/separate pages/resume.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="../style2.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home page</a></li>
+            <li><a href="../nav_bar.html">Second page</a></li>
+            <li style="float: right;"><a href="hobby.html">Hobby</a></li>
+            <li style="float: right;"><a href="program.html">Programs</a></li>
+            <li style="float: right;"><a href="resume.html">Resume</a></li>
+        </ul>
+    </nav><br>
     <h1>Matt Green</h1>
-    <p>Email: <a href="mattreygreen@gmail.com">mattreygreen@gmail.com</a></p>
+    <p>Email: <a href="mailto:mattreygreen@gmail.com">mattreygreen@gmail.com</a></p>
     <p>Phone: 512-621-4253</p>
 
     <ul>
