--- a/third_page.html
+++ b/third_page.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        .blank {
+            background-color: ivory;
+            color:ivory;
+        }
         p {
             font-size: 20px;
             width: 75%;
@@ -52,13 +56,16 @@
     </style>
 </head>
 <body>
-    <h1>Messing with CSS</h1><hr>
     <div>
         <ul>
             <li><a href="index.html">Home page</a></li>
-            <li><a href="second_page.html">Second page</a></li>
+            <li><a href="nav_bar.html">Second page</a></li>
+            <li style="float: right;"><a href="separate pages/hobby.html">Hobby</a></li>
+            <li style="float: right;"><a href="separate pages/program.html">Programs</a></li>
+            <li style="float: right;"><a href="separate pages/resume.html">Resume</a></li>
         </ul>
     </div><br>
+    <h1>Messing with CSS</h1><hr>
     <div class="rainbow">
         <p class="red">red</p>
         <p class="orange">orange</p>
