--- a/separate pages/hobby.html
+++ b/separate pages/hobby.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home page</a></li>
+            <li><a href="../nav_bar.html">Second page</a></li>
+            <li style="float: right;"><a href="hobby.html">Hobby</a></li>
+            <li style="float: right;"><a href="program.html">Programs</a></li>
+            <li style="float: right;"><a href="resume.html">Resume</a></li>
+        </ul>
+    </nav><br>
     <p>hobby</p>
 </body>
 </html>
