--- a/separate pages/program.html
+++ b/separate pages/program.html
@@ -17,9 +17,11 @@
             <li style="float: right;"><a href="resume.html">Resume</a></li>
         </ul>
     </nav><br>
-    <h1>Programs</h1>
-    <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
-    <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
+    <h1>Programs</h1><hr>
+    <h3>Photoshop</h3>
+    <h3>Click run and enter the name of an image you want to apply filters to (v.png, austin.png, or blank.png)</h3>
+    <iframe src="https://replit.com/@Matthew234532/Photoshop?embed=true" width="65%" height="550"></iframe><br><hr>
+    <iframe src="https://mattlolz.github.io" width="65%" height="550"></iframe><br><hr>
     <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
 </body>
 </html>
