--- a/third_page.html
+++ b/third_page.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <style>
         .blank {
             background-color: ivory;
@@ -54,9 +53,10 @@
         }
 
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <nav>
         <ul>
             <li><a href="index.html">Home page</a></li>
             <li><a href="nav_bar.html">Second page</a></li>
@@ -64,7 +64,7 @@
             <li style="float: right;"><a href="separate pages/program.html">Programs</a></li>
             <li style="float: right;"><a href="separate pages/resume.html">Resume</a></li>
         </ul>
-    </div><br>
+    </nav><br>
     <h1>Messing with CSS</h1><hr>
     <div class="rainbow">
         <p class="red">red</p>
