--- a/second.html
+++ b/second.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Third page</title>
     <style>
         .blank {
             background-color: ivory;
@@ -56,15 +59,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home page</a></li>
-            <li><a href="nav_bar.html">Second page</a></li>
-            <li style="float: right;"><a href="separate pages/hobby.html">Hobby</a></li>
-            <li style="float: right;"><a href="separate pages/program.html">Programs</a></li>
-            <li style="float: right;"><a href="separate pages/resume.html">Resume</a></li>
-        </ul>
-    </nav><br>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="second.html">Second page</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="separate pages/resume.html">Resume</a></li>
+                  <li><a class="dropdown-item" href="separate pages/program.html">Programs</a></li>
+                  <li><a class="dropdown-item" href="separate pages/hobby.html">Hobbies</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <h1>Messing with CSS</h1><hr>
     <div class="rainbow">
         <p class="red">red</p>
