--- a/separate pages/hobby.html
+++ b/separate pages/hobby.html
@@ -4,19 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Hobbies</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../second.html">Second page</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                  <li><a class="dropdown-item" href="program.html">Programs</a></li>
+                  <li><a class="dropdown-item" href="hobby.html">Hobbies</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <h1>Hobbies</h1><hr>
+    <ul style="text-align:left; font-family: Arial, Helvetica, sans-serif;">
+        <li><span style="color:rgb(95, 95, 95)">Programming</span></li><br>
         <ul>
-            <li><a href="../index.html">Home page</a></li>
-            <li><a href="../nav_bar.html">Second page</a></li>
-            <li style="float: right;"><a href="hobby.html">Hobby</a></li>
-            <li style="float: right;"><a href="program.html">Programs</a></li>
-            <li style="float: right;"><a href="resume.html">Resume</a></li>
+            <li>I like to <span style="color:rgb(95, 95, 95)">program</span> in my free time.</li>
+            <li>I like learning about different <span style="color:rgb(95, 95, 95)">programming</span> languages and how they work.</li>
+        </ul><br>
+        <li>Playing <span style="color:rgb(95, 95, 95)">video games</span></li>
+        <ul>
+            <li><span style="color:rgb(95, 95, 95)">Playing video games</span> is a fun pass time because it engages us in a way that things like school doesn't.</li>
+            <li>I enjoy <span style="color:rgb(95, 95, 95)">playing video games</span> because I can play with friends and occupy myself with something that doesn't necessarily require me to learn while trying to have fun.</li>
         </ul>
-    </nav><br>
-    <p>hobby</p>
+    </ul>
 </body>
 </html>
