--- a/separate pages/program.html
+++ b/separate pages/program.html
@@ -4,24 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Programs</title>
+    <style>
+        body {
+            text-align: center;
+        }
+    </style>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home page</a></li>
-            <li><a href="../nav_bar.html">Second page</a></li>
-            <li style="float: right;"><a href="hobby.html">Hobby</a></li>
-            <li style="float: right;"><a href="program.html">Programs</a></li>
-            <li style="float: right;"><a href="resume.html">Resume</a></li>
-        </ul>
-    </nav><br>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../second.html">Second page</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                  <li><a class="dropdown-item" href="program.html">Programs</a></li>
+                  <li><a class="dropdown-item" href="hobby.html">Hobbies</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <h1>Programs</h1><hr>
-    <h3>Photoshop</h3>
+    <h2><span style="color:rgb(95, 95, 95)">Photoshop</span></h2>
     <h3>Click run and enter the name of an image you want to apply filters to (v.png, austin.png, or blank.png)</h3>
-    <iframe src="https://replit.com/@Matthew234532/Photoshop?embed=true" width="65%" height="550"></iframe><br><hr>
-    <iframe src="https://mattlolz.github.io" width="65%" height="550"></iframe><br><hr>
-    <iframe src="" frameborder="0" width="40%" height="40px"></iframe>
+    <iframe src="https://replit.com/@Matthew234532/Photoshop?embed=true" width="65%" height="600"></iframe><br><hr>
+
+    <h2><span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span></h2>
+    <h3>Simple command line <span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span> game that uses X's and Y's instead of X's and O's</h3>
+    <iframe src="https://replit.com/@MattGreen1/Tic-Tac-Toe?embed=true" width="65%" height="550"></iframe><br>
 </body>
 </html>
