Removed second.html and link on all navbars

--- a/separate pages/hobby.html
+++ b/separate pages/hobby.html
@@ -18,9 +18,6 @@
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../second.html">Second page</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
                 <ul class="dropdown-menu">
@@ -33,18 +30,19 @@
           </div>
         </div>
       </nav>
-    <h1>Hobbies</h1><hr>
+    <h1 style="padding-top:15px;">Hobbies</h1><hr>
     <ul style="text-align:left; font-family: Arial, Helvetica, sans-serif;">
         <li><span style="color:rgb(95, 95, 95)">Programming</span></li><br>
         <ul>
             <li>I like to <span style="color:rgb(95, 95, 95)">program</span> in my free time.</li>
             <li>I like learning about different <span style="color:rgb(95, 95, 95)">programming</span> languages and how they work.</li>
-        </ul><br>
-        <li>Playing <span style="color:rgb(95, 95, 95)">video games</span></li>
-        <ul>
-            <li><span style="color:rgb(95, 95, 95)">Playing video games</span> is a fun pass time because it engages us in a way that things like school doesn't.</li>
-            <li>I enjoy <span style="color:rgb(95, 95, 95)">playing video games</span> because I can play with friends and occupy myself with something that doesn't necessarily require me to learn while trying to have fun.</li>
         </ul>
+        <li><span style="color:rgb(95, 95, 95)">Creating paracord bracelets</span><br>
+        <ul>
+          <li>In addition to programming in my free time, I create paracord bracelets for myself.</li>
+          <li>I still have things to learn about this but so far it's going perfectly fine.</li>
+        </ul>
+        </li>
     </ul>
 </body>
 </html>
