--- a/separate pages/resume.html
+++ b/separate pages/resume.html
@@ -17,9 +17,6 @@
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../second.html">Second page</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
                 <ul class="dropdown-menu">
@@ -44,17 +41,14 @@
             <li>Computer Science 2</li>
             <li>AP Computer Science Principles</li>
         </ul>
-        <li>Education:</li>
+        <li class="adjust-padding">Education:</li>
         <ul>
             <li>Menchaca Elementary</li>
             <li>Zilker Elementary</li>
             <li>O Henry Middle School</li>
             <li>Austin High School; Academy of Design and Technology (201X-2023)</li>
-            <ul>
-                <li></li>
-            </ul>
         </ul>
-        <li>Skills:</li>
+        <li class="adjust-padding">Skills:</li>
         <ul>
             <li>Python</li>
             <ul>
