--- a/separate pages/hobby.html
+++ b/separate pages/hobby.html
@@ -7,7 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Hobbies</title>
+    <style>
+      .bottom {
+        padding-top:57%;
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -44,5 +50,10 @@
         </ul>
         </li>
     </ul>
+    <div class="bottom">
+      <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; text-decoration:none; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
+      <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; text-decoration:none; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
+      <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
+    </div>
 </body>
 </html>
