--- a/separate pages/program.html
+++ b/separate pages/program.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Programs</title>
     <style>
         body {
@@ -15,33 +16,38 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Home</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="resume.html">Resume</a></li>
-                  <li><a class="dropdown-item" href="program.html">Programs</a></li>
-                  <li><a class="dropdown-item" href="hobby.html">Hobbies</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                <li><a class="dropdown-item" href="program.html">Programs</a></li>
+                <li><a class="dropdown-item" href="hobby.html">Hobbies</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
-      </nav>
-    <h1>Programs</h1><hr>
-    <h2><span style="color:rgb(95, 95, 95)">Photoshop</span></h2>
-    <h3>Click run and enter the name of an image you want to apply filters to (v.png, austin.png, or blank.png)</h3>
-    <iframe src="https://replit.com/@Matthew234532/Photoshop?embed=true" width="65%" height="600"></iframe><br><hr>
+      </div>
+    </nav>
+  <h1>Programs</h1><hr>
+  <h2><span style="color:rgb(95, 95, 95)">Photoshop</span></h2>
+  <h3>Click run and enter the name of an image you want to apply filters to (v.png, austin.png, or blank.png)</h3>
+  <iframe src="https://replit.com/@Matthew234532/Photoshop?embed=true" width="65%" height="600"></iframe><br><hr>
 
-    <h2><span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span></h2>
-    <h3>Simple command line <span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span> game that uses X's and Y's instead of X's and O's</h3>
-    <iframe src="https://replit.com/@MattGreen1/Tic-Tac-Toe?embed=true" width="65%" height="550"></iframe><br>
+  <h2><span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span></h2>
+  <h3>Simple command line <span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span> game that uses X's and Y's instead of X's and O's</h3>
+  <iframe src="https://replit.com/@MattGreen1/Tic-Tac-Toe?embed=true" width="65%" height="550"></iframe><br>
+  <div class="bottom">
+    <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; text-decoration:none; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
+    <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; text-decoration:none; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
+    <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
+  </div>
 </body>
 </html>
