--- a/separate pages/resume.html
+++ b/separate pages/resume.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Resume</title>
+    <style>
+      .bottom {
+        text-align:center;
+        padding-top:80px;
+      }
+    </style>
 </head>
 <body style="background-color: ivory;">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -31,7 +38,7 @@
       </nav>
     <h1 style="text-align:center;">Matt Green</h1><hr>
     <p style="text-align: center;">Email: <a href="mailto:mattreygreen@gmail.com">mattreygreen@gmail.com</a></p>
-    <p style="text-align: center;">Phone: 512-621-4253</p>
+    <p style="text-align: center;">Phone: <a href="tel:+15126214253">512-621-4253</a></p>
 
     <ul style="margin-left:40px;">
         <li>Experience:</li>
@@ -64,5 +71,10 @@
             <li>Java</li>
         </ul>
     </ul>
+    <div class="bottom">
+      <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; text-decoration:none; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
+      <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; text-decoration:none; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
+      <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
+    </div>
 </body>
 </html>
