Better styling for icons, fixed index.html indents

--- a/separate pages/program.html
+++ b/separate pages/program.html
@@ -44,10 +44,11 @@
   <h2><span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span></h2>
   <h3>Simple command line <span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span> game that uses X's and Y's instead of X's and O's</h3>
   <iframe src="https://replit.com/@MattGreen1/Tic-Tac-Toe?embed=true" width="65%" height="550"></iframe><br>
+  
   <div class="bottom">
-    <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; text-decoration:none; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
-    <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; text-decoration:none; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
-    <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
+    <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
+    <button><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
+    <button><i class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
   </div>
 </body>
 </html>
