--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home page</title>
-  <style>
-    .bottom {
-      margin-top:73%;
-    }
-  </style>
+
 </head>
 <body>
 
@@ -38,17 +35,18 @@
 </nav>
 
 <div class="container-fluid mt-3">
-  <h3>Matt's website</h3>
+  <h3 class="h3">Matt's website</h3>
   <p>Navigate to the top where it says dropdown, click on it, and from there click on the section you would like to see</p>
   <div class="spinner-grow text-success"></div>
   <div class="spinner-grow text-warning"></div>
   <div class="spinner-grow text-danger"></div>
 </div>
 
+
 <div class="bottom">
-  <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; text-decoration:none; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
-  <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; text-decoration:none; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
-  <button style="border-width:0px;background-color:ivory;"><i style="font-size:24px;" class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
+  <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
+  <button><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
+  <button><i class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
 </div>
 
 </body>
