Fixed icon style

--- a/separate pages/program.html
+++ b/separate pages/program.html
@@ -12,7 +12,15 @@
         body {
             text-align: center;
         }
+        .no_border {
+          margin-top:10px;
+          border-width:0;
+        }
+        div button i a {
+          text-decoration: none;
+        }
     </style>
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -45,10 +53,10 @@
   <h3>Simple command line <span style="color:rgb(95, 95, 95)">Tic-Tac-Toe</span> game that uses X's and Y's instead of X's and O's</h3>
   <iframe src="https://replit.com/@MattGreen1/Tic-Tac-Toe?embed=true" width="65%" height="550"></iframe><br>
   
-  <div class="bottom">
-    <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
-    <button><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
-    <button><i class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
+  <div>
+    <button class="no_border" style="background-color:ivory;"><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
+    <button class="no_border" style="background-color:ivory;"><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
+    <button class="no_border" style="background-color:ivory;"><i class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
   </div>
 </body>
 </html>
