Added alt attributes to images

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="spinner-grow text-warning"></div>
     <div class="spinner-grow text-danger"></div>
   </div>
-  
-  <img src="Images/use_tic.png">
-  <img src="Images/use_python.png"><br>
-  <img src="Images/use_dog.png">
-  <img src="Images/use_cat.png">
+
+  <img src="Images/use_tic.png" alt="Tic-Tac-Toe game being played">
+  <img src="Images/use_python.png" alt="Python logo"><br>
+  <img src="Images/use_dog.png" alt="Cute dog">
+  <img src="Images/use_cat.png" alt="Cute cat">
 
   <div class="bottom">
     <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
