--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <img src="Images/use_dog.png" alt="Cute dog">
   <img src="Images/use_cat.png" alt="Cute cat">
 
+  <script src="//code.tidio.co/zyteftxqyjzbz4pn6gnxxevlq3mcxknc.js" async></script>
+
   <div class="bottom">
     <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
     <button><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
