done with code sub 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home page</title>
-
 </head>
 <body>
 
@@ -19,7 +18,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <div class="collapse navbar-collapse" id="collapsibleNavbar" style="padding-left:89%;">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
@@ -34,20 +33,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid mt-3">
-    <h3 class="h3">Matt's website</h3>
-    <p>Navigate to the top where it says dropdown, click on it, and from there click on the section you would like to see</p>
-    <div class="spinner-grow text-success"></div>
-    <div class="spinner-grow text-warning"></div>
-    <div class="spinner-grow text-danger"></div>
-  </div>
-
-  <img src="Images/use_tic.png" alt="Tic-Tac-Toe game being played">
-  <img src="Images/use_python.png" alt="Python logo"><br>
-  <img src="Images/use_dog.png" alt="Cute dog">
-  <img src="Images/use_cat.png" alt="Cute cat">
-
-  <script src="//code.tidio.co/zyteftxqyjzbz4pn6gnxxevlq3mcxknc.js" async></script>
+  <a href="../code2_submit.html">CODE</a>
 
   <div class="bottom">
     <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
