--- a/separate pages/resume.html
+++ b/separate pages/resume.html
@@ -48,16 +48,15 @@
             <li>Computer Science 1</li>
             <li>Computer Science 2</li>
             <li>AP Computer Science Principles</li>
+            <li>AP Computer Science A</li>
         </ul>
         <li class="adjust-padding">Education:</li>
         <ul>
-            <li>Menchaca Elementary</li>
-            <li>Zilker Elementary</li>
-            <li>O Henry Middle School</li>
-            <li>Austin High School; Academy of Design and Technology (201X-2023)</li>
+            <li>Austin High School; Academy of Design and Technology (201X-2024)</li>
         </ul>
         <li class="adjust-padding">Skills:</li>
         <ul>
+          <li>Unity (2D and 3D)</li>
             <li>Python</li>
             <ul>
                 <li>Pygame</li>
@@ -70,6 +69,9 @@
             <li>Html, CSS, JavaScript</li>
             <li>C++</li>
             <li>Java</li>
+            <ul>
+              <li>Swing</li>
+            </ul>
         </ul>
     </ul>
     <div class="bottom">
