--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style2.css">
+  <!-- <link rel="stylesheet" href="style2.css"> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home page</title>
 </head>
 <body>
-
+<!--
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Home</a>
@@ -32,7 +32,14 @@
       </div>
     </div>
   </nav>
-
+  <p>A title/subtitle with your first & last name, the class name and school year</p>
+  <p>A paragraph with 3-6 sentences giving an overview of the webpage and a summary of what you've learned in Digital Design & Media Production</p>
+  <p>Fall final exam (Zine) and Unit 8 culmination project are required</p>
+  <p>At least 4 other projects from the fall semester and at least 4 others from the spring semester</p>
+  <p>Make sure your projects are in viewable formats on the webpage (PDF, PNG, JPG, MP3, MP4, GIF)</p>
+  <p>The above 10(+) projects can be presented in any order (i.e. could be in order created during the year, could show your favorite project first, etc.)</p>
+  <p>Feel free to showcase any assignments you've created in other classes this year that utilized any of the skills you've learned in this class! (in addition to the above 10 required)</p>
+  
   <a href="../code2_submit.html">CODE</a>
 
   <div class="bottom">
@@ -40,6 +47,17 @@
     <button><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
     <button><i class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
   </div>
-
+-->
+  <div class="image-container">
+    <!-- change the image, download a new one. -->
+    <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="image">
+    <div class="overlay-text"><p style="padding-bottom: 0px;">Matt Green</p><p style="font-size: 15px;">Whatever class this is</p></div>
+  </div>
+  <div class="heading-text">
+    <p>portfolio</p>
+  </div>
+  <div class="body-text">
+    <p>project name</p>
+  </div>
 </body>
 </html>
