--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style2.css">
+  <!-- <link rel="stylesheet" href="style2.css"> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home page</title>
-
 </head>
 <body>
-
+<!--
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <div class="collapse navbar-collapse" id="collapsibleNavbar" style="padding-left:89%;">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
@@ -33,27 +32,73 @@
       </div>
     </div>
   </nav>
-
-  <div class="container-fluid mt-3">
-    <h3 class="h3">Matt's website</h3>
-    <p>Navigate to the top where it says dropdown, click on it, and from there click on the section you would like to see</p>
-    <div class="spinner-grow text-success"></div>
-    <div class="spinner-grow text-warning"></div>
-    <div class="spinner-grow text-danger"></div>
-  </div>
-
-  <img src="Images/use_tic.png" alt="Tic-Tac-Toe game being played">
-  <img src="Images/use_python.png" alt="Python logo"><br>
-  <img src="Images/use_dog.png" alt="Cute dog">
-  <img src="Images/use_cat.png" alt="Cute cat">
-
-  <script src="//code.tidio.co/zyteftxqyjzbz4pn6gnxxevlq3mcxknc.js" async></script>
+  <p>A title/subtitle with your first & last name, the class name and school year</p>
+  <p>A paragraph with 3-6 sentences giving an overview of the webpage and a summary of what you've learned in Digital Design & Media Production</p>
+  <p>Fall final exam (Zine) and Unit 8 culmination project are required</p>
+  <p>At least 4 other projects from the fall semester and at least 4 others from the spring semester</p>
+  <p>Make sure your projects are in viewable formats on the webpage (PDF, PNG, JPG, MP3, MP4, GIF)</p>
+  <p>The above 10(+) projects can be presented in any order (i.e. could be in order created during the year, could show your favorite project first, etc.)</p>
+  <p>Feel free to showcase any assignments you've created in other classes this year that utilized any of the skills you've learned in this class! (in addition to the above 10 required)</p>
+  
+  <a href="../code2_submit.html">CODE</a>
 
   <div class="bottom">
     <button><i class="fa"><a href="https://github.com/mattlolz/mattlolz.github.io" style="font-size:35px; color:black;" title="This websites GitHub page">&#xf09b;</a></i></button>
     <button><i class="fa"><a href="https://twitter.com/mattlolz_on_gh" style="font-size:35px; color:#1DA1F2;" title="My Twitter">&#xf099;</a></i></button>
     <button><i class="fa"><a href="https://www.instagram.com/mattlolz_on_github" style="font-size:35px; text-decoration:none; color:black;" title="My Instagram">&#xf16d;</a></i></button>
   </div>
-
+-->
+  <div class="image-container" style="width: 100%;height: 100vh; object-fit: cover;">
+    <!-- change the image, download a new one. -->
+    <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="image">
+    <div class="overlay-text"><p>Matt Green</p><p style="font-size:20px;">Digital Media Per. 7</p></div>
+  </div>
+  <div class="about-me">
+    <p class="heading-text">About me poster</p>
+    <img src="Assignments/About Me Poster-1.png" style="width: 1004.0625px; height: 1785;">
+  </div>
+  <div class="album-cover">
+    <p class="heading-text">Album Covers</p>
+    <img src="Assignments/kendrick.png" alt="kendrick" style="width: 350px; height: 350px">
+    <img src="Assignments/kanye.png" alt="kanye" style="width: 350px; height: 350px">
+  </div>
+  <div class="zine">
+    <p class="heading-text">Fall final (Zine)</p>
+    <img src="Zine/per7_MGreen_zinefinal-1.png" alt="menu" style="height: 776px; width: 502.1176470589px">
+    <br>
+    <img src="Zine/per7_MGreen_zinefinal-2.png" alt="menu" style="height: 776px; width: 1004.23529412px;">
+    <img src="Zine/per7_MGreen_zinefinal-3.png" alt="menu" style="height: 776px; width: 1004.23529412px;">
+    <br>
+    <img src="Zine/per7_MGreen_zinefinal-4.png" alt="menu" style="height: 776px; width: 1004.23529412px;">
+    <br>
+    <img src="Zine/per7_MGreen_zinefinal-5.png" alt="menu" style="height: 776px; width: 502.1176470589px;">
+  </div>
+  <div class="audio-project">
+    <p class="heading-text">Audio Project</p>
+    <audio controls>
+      <source src="Assignments/PSA Project.mp3" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+  </div>
+  <div class="menu">
+    <p class="heading-text">Menu</p>
+    <img src="Assignments/per7_mgreen_menu-1-1.png" alt="menu" style="height: 480px; width: 306px;">
+    <img src="Assignments/per7_mgreen_menu-1-2.png" alt="menu" style="height: 480px; width: 306px;">
+  </div>
+  <div class="take-5">
+    <p class="heading-text">Edit a clip</p>
+    <img src="Assignments/Matt Green 7 (1).gif" alt="g" style="height: 255; width: 400px;">
+  </div>
+  <div class="bouncing-ball">
+    <p class="heading-text">Bouncing ball</p>
+    <img src="Assignments/Bouncing-Ball.gif" alt="g" style="height: 255; width: 400px;">
+  </div>
+  <div class="culmination-project" style="padding-bottom: 100px;">
+    <p class="heading-text">Culmination project</p>
+    <audio controls>
+      <source src="Assignments/Culminating_Project.mp3" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+  </div>
 </body>
 </html>
